Correct alignment of tooltip close button

--- a/style.css
+++ b/style.css
@@ -196,7 +196,7 @@ header {
     width: 100%;
     max-width: 1000px;
     margin: 22px auto;
-    padding: 0 15px;
+    padding-left: 15px;
     font-size: 14px;
     line-height: 1em;
 }
@@ -231,7 +231,7 @@ header {
     display: none;
     position: absolute;
     top: -11px;
-    right: 15px;
+    right: 9px;
     background: none;
     border: 0;
     width: 40px; height: 40px;
